--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-org.gradle.caching=true
-org.gradle.configuration-cache=true
 
 #Kotlin
 kotlin.code.style=official
@@ -9,3 +7,6 @@ kotlin.code.style=official
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+#MPP
+kotlin.mpp.enableCInteropCommonization=true
